Implementing the take of the quiz flow for the learner

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,14 @@
         android:theme="@style/Theme.EducationSupport"
         tools:targetApi="31">
         <activity
+            android:name=".learner.QuizResultActivity"
+            android:exported="false"
+            android:launchMode="singleInstance"/>
+        <activity
+            android:name=".learner.TakeQuizActivity"
+            android:exported="false"
+            android:launchMode="singleInstance"/>
+        <activity
             android:name=".learner.QuizListActivity"
             android:exported="false" />
         <activity
