--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.EducationSupport"
         tools:targetApi="31">
         <activity
+            android:name=".ViewQuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CreateQuizActivity"
+            android:exported="false" />
+        <activity
             android:name=".learner.QuizAnswerReviewActivity"
             android:exported="false" />
         <activity
