--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,13 @@
         tools:targetApi="31">
         <activity
             android:name=".EducatorMainActivity"
-            android:exported="false" />
+            android:exported="true">
+<!--        <intent-filter>-->
+<!--            <action android:name="android.intent.action.MAIN" />-->
+
+<!--            <category android:name="android.intent.category.LAUNCHER" />-->
+<!--        </intent-filter>-->
+        </activity>
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
@@ -28,6 +34,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".educator.EducatorCourseActivity"
+            android:exported="false" />
         <activity
             android:name=".educator.ViewQuizActivity"
             android:exported="false" />
